<resources>
    <string name="app_name">PriceTag</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="product_name">Ime proizvoda</string>
    <string name="search">PRETRAŽI</string>
    <string name="recently_updated_products">Nedavno ažurirani proizvodi</string>
    <string name="product">Proizvod</string>
    <string name="producer">Proizvođač</string>
    <string name="stores_with_product">Proizvod je moguće pronaći u trgovinama:</string>
    <string name="username">Korisničko ime</string>
    <string name="email">Email</string>
    <string name="password">Lozinka</string>
    <string name="retype_password">Ponovljena lozinka</string>
    <string name="register">Registracija</string>
    <string name="send_password">Pošalji lozinku</string>
    <string name="login">Prijava</string>
    <string name="forgotten_password">Zaboravljena lozinka?</string>
    <string name="create_an_account">Registriraj se</string>
    <string name="product_filter">Filtriranje proizvoda</string>
    <string name="save">SPREMI</string>
    <string name="category">Kategorija</string>
    <string name="subcategory">Potkategorija</string>
    <string name="string_store">Trgovina</string>
    <string name="price">Cijena</string>
    <string name="add_product">Dodaj proizvod</string>
    <string name="size">Veličina</string>
    <string name="product_description">Opis proizvoda</string>
    <string name="load_product">Učitaj proizvod</string>
    <string name="barcode">Barkod</string>
    <string name="points">Bodovi</string>
    <string name="information_validity">Vjerodostojnost informacije</string>
    <string name="registration_date">Datum registracije</string>
    <string name="user_type">Vrsta korisnika</string>
    <string name="feedbacks_received">Broj primljenih ocjena</string>
    <string name="feedbacks_given">Broj danih ocjena</string>
    <string name="new_price">Nova cijena</string>
    <string name="update_price">Ažuriraj cijenu</string>
    <string name="correct_price">Je li cijena proizvoda ispravna?</string>
    <string name="no">NE</string>
    <string name="yes">DA</string>
</resources>
